[package]
name = "russh"
version = "0.4.0"
edition = "2021"
authors = ["Nikhil Prabhu <nikhilprabhu98@gmail.com>"]
license = "MIT"
repository = "https://github.com/nikhil-prabhu/russh"
keywords = ["pyo3", "python", "ssh"]

[badges]
maintenance = { status = "experimental" }

[lib]
crate-type = ["cdylib"]

[dependencies]
ssh2 = "0.9.4"

[dependencies.pyo3]
version = "0.20.0"
features = ["abi3-py37", "extension-module"]
